Fixed bug with new event notification not showing

--- a/crm-david-yelin/src/styles/Navbar.css
+++ b/crm-david-yelin/src/styles/Navbar.css
@@ -119,7 +119,7 @@ header .logo a {
 }
 
 .MuiBadge-badge {
-  font-size: 1.5rem !important;
+  font-size: 1.6rem !important;
 }
 
 .notification-dropdown {
